--- a/Client/css/styles.css
+++ b/Client/css/styles.css
@@ -1,5 +1,6 @@
 :root {
   --color-primary: #92278f;
   --color-links: #179be5;
-  --color-body: #000000;
+  --color-placeholder: #878686;
+  --color-heading: #000000;
 }
