--- a/Client/css/styles.css
+++ b/Client/css/styles.css
@@ -56,6 +56,33 @@ h2,
   font-size: 1.4rem;
 }
 
+/*Grids*/
+/* Grid container styles */
+.grid-container {
+  display: grid;
+  grid-template-rows: 2fr 1fr; /* Top row 2/3, bottom row 1/3 */
+  height: 100vh; /* Full viewport height */
+}
+
+/* Row styles */
+.grid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.main-grid {
+  background-color: lightblue;
+}
+
+.panel-grid {
+  background-color: lightcoral;
+}
+
+@media screen and (min-width: 700px) {
+}
+
 @media screen and (min-width: 1024px) {
   h1 {
     font-size: 6rem;
