--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -31,19 +31,20 @@ body {
 h1,
 h2 {
   color: var(--color-heading);
-  font-weight: 700; /* Bold */
   margin-top: 0;
 }
 
 /* H1 specific styles */
 h1 {
-  font-size: 4rem;
+  font-size: 3rem;
   margin-bottom: 2rem;
+  font-weight: 550; /* Bold */
 }
 
 /* H2 specific styles */
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
+  font-weight: 500; /* Bold */
 }
 
 /* Text groups with consistent margins */
@@ -146,6 +147,7 @@ h2,
 #AnchorzUpLogo {
   width: 60%;
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 /* =======================================
@@ -186,15 +188,21 @@ h2,
     padding-top: 25%;
     margin-bottom: 6rem;
   }
+  h1 {
+    padding-bottom: 2rem;
+  }
+  h2 {
+    padding-bottom: 1.5rem;
+  }
 }
 
 /* Typography adjustments for screens >= 1024px */
 @media screen and (min-width: 1024px) {
   h1 {
-    font-size: 6rem;
+    font-size: 4rem;
   }
   h2 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
   .placeholder-text {
     font-size: 2.4rem;
