made sure the picture doesent touch the edges of the panel

--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -144,12 +144,9 @@ h2,
   overflow-x: hidden;
 }
 #AnchorzUpLogo {
-  width: 60%;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  padding: 10%;
 }
 .shortlink-text:hover {
-  font-weight: 600; /* Slightly bolder font */
   color: lightblue; /* Light blue color on hover */
 }
 
